syntax="proto3";


package restaurant;


option go_package="pkg/proto/restaurant";

message Item {
    string name = 1;
    float price = 2;
}

message Restaurant {
    string name = 1;
    repeated Item items = 2;
}


message AddRestaurantRequest {
    Restaurant restaurant = 1;
}

message AddRestaurantResponse {
    string response = 1;
}

message GetAllRestaurantRequest {

}

message GetAllRestaurantResponse {
    repeated Restaurant restaurants = 1;
}

message GetSpecificRestaurantRequest {
    int64 restaurant_id = 1;
}

message GetSpecificRestaurantResponse {
    Restaurant restaurant = 1;
}

message AddRestaurantItemRequest {
    int64 restaurant_id = 1;
    string item_name = 2;
    string price = 3;
}

message AddRestaurantItemResponse {
    string response = 1;
}

message UpdateRestaurantItemRequest {
    int64 restaurant_id = 1;
    int64 item_id = 2;
    string item_name = 3;
    string price = 4;
}

message UpdateRestaurantItemResponse {
    string response = 1;
}

message DeleteItemRequest {
    int64 restaurant_id = 1;
    int64 item_id = 2;

}

message DeleteItemResponse {
    string response = 1;
}

message GetAllItemsRequest {
    int64 restaurant_id = 1;
}

message GetAllItemsResponse {
    repeated Item items = 1;
}

message GetSpecificItemRequest {
    int64 restaurant_id = 1;
    int64 item_id = 2;
}

message GetSpecificItemResponse {
    Item item = 1;
}

service OrderService {
    rpc AddRestaurant(AddRestaurantRequest) returns (AddRestaurantResponse){}
    rpc GetAllRestaurant(GetAllRestaurantRequest) returns (GetAllRestaurantResponse){}
    rpc GetSpecificRestaurant(GetSpecificRestaurantRequest) returns (GetSpecificRestaurantResponse){}
    rpc AddRestaurantItem(AddRestaurantItemRequest) returns (AddRestaurantItemResponse){}
    rpc UpdateRestaurantItem(UpdateRestaurantItemRequest) returns (UpdateRestaurantItemResponse){}
    rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse){}
    rpc GetAllItems(GetAllItemsRequest) returns (GetAllItemsResponse){}
    rpc GetSpecificItem(GetSpecificItemRequest) returns (GetSpecificItemResponse){}
}

