package service

import (
	"context"

	customerpb "github.com/consumer-order-prediction/pkg/proto/customer"
)


func (s *Service) AddCustomer(ctx context.Context, req *customerpb.AddCustomerRequest) (*customerpb.AddCustomerResponse, error) {


	return nil,nil
}

func (s *Service) GetAllCustomer(ctx context.Context, req *customerpb.GetAllCustomerRequest) (*customerpb.GetAllCustomerResponse, error) {


	return nil,nil
}

func (s *Service) GetSpecificCustomer(ctx context.Context, req *customerpb.GetSpecificCustomerRequest) (*customerpb.GetSpecificCustomerResponse, error) {


	return nil,nil
}